# CrowdStrike-Falcon-Events-Data-Dictionary

./: CITATION.cff  README.md  llms.txt  pyproject.toml
10-24-2025/: sensor_events.csv
app/: examine_pdf.py  extract_events.py
data/2025-10-24/: sensor_events.md
data/current/: SOURCE.md  sensor_events.csv  sensor_events.md
prompts/: system-prompt.md
skills/crowdstrike-falcon-events/: SKILL.md
