[project]
name = "crowdstrike-falcon-events-data-dictionary"
version = "0.1.0"
description = "Open, machine-readable CrowdStrike Falcon sensor events data dictionary (CSV + Markdown) for threat hunting, SIEM onboarding, and AI/LLM ingestion."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = [
    "crowdstrike",
    "falcon",
    "edr",
    "data-dictionary",
    "threat-hunting",
    "detection-engineering",
    "siem",
    "security",
]
dependencies = [
    "pdfplumber>=0.11.7",
]
